@@ -1,5 +1,11 @@
 2009-03-31  Bastien Nocera  <hadess@hadess.net>
 
+	* data/playlist.ui: Patch from Bruce Cowan
+	<bugs@bcowan.fastmail.co.uk> to remove the relief on the
+	playlist buttons (Closes: #568127)
+
+2009-03-31  Bastien Nocera  <hadess@hadess.net>
+
 	* src/plugins/opensubtitles/opensubtitles.py: Sort the languages
 	in the combo box (Closes: #577366)
 
